--- a/n_highschool.css
+++ b/n_highschool.css
@@ -955,4 +955,15 @@ h2.bp_heading {
 	background-image: url("./image/footer02_bg01.png");
 }
 
+.more_detail {
+	text-align: center;
+	color: white;
+	font-size: 18px;
+	display: block;
+	padding-top: 40px;
+	letter-spacing: 0.1em;
+}
+
+
+
 
