--- a/n_highschool.css
+++ b/n_highschool.css
@@ -972,7 +972,7 @@ h2.bp_heading {
 
 .contact_links_left {
 	display: block;
-	padding: 10px 10px;
+	padding: 10px 30px 0 10px;
 	list-style-type: none;
 	width: 260px;
 	height: 130px;
