--- a/n_highschool.css
+++ b/n_highschool.css
@@ -1028,6 +1028,7 @@ h2.bp_heading {
 
 .footer_navi {
 	width: 1000px;
+	height: 60px;
 	padding: 40px 10px 10px 0px;
 	display: flex;
 	flex-wrap: wrap;
@@ -1063,7 +1064,7 @@ h2.bp_heading {
 .footer_navi li:nth-of-type(n+6):after{
 	content: "";
 }
-
+/*ページトップへの移動ボタン*/
 .pagetop {
 	display: block;
 	position: relative;
@@ -1075,5 +1076,39 @@ h2.bp_heading {
 	opacity: 0.8;
 }
 
+/*フッターのリンク集*/
+.footer_l_block {
+	width: 20%;
+	padding-bottom: 10px;
+}
 
+.ap_font {
+	font-size: 11px;
+	color: #000066;
+}
 
+.first_child {
+	font-size: 18px;
+	color: #000066;
+	text-decoration: none;
+	font-weight: bold;
+	white-space: nowrap;
+}
+
+.list_link li {
+	list-style-type: none;
+	font-size: 14px;
+	color: #272727;
+	padding: 10px 0px 5px 0px;
+}
+
+.list_link a {
+	color: #272727;
+	text-decoration: none;
+}
+
+.list_link a:hover {
+	text-decoration: underline;
+}
+
+:last-child a {
