--- a/n_highschool.css
+++ b/n_highschool.css
@@ -1077,6 +1077,13 @@ h2.bp_heading {
 }
 
 /*フッターのリンク集*/
+#footer_links {
+	width: 1060px;
+	margin:auto;
+	display: flex;
+	flex-wrap: wrap;
+}
+
 .footer_l_block {
 	width: 20%;
 	padding-bottom: 10px;
@@ -1088,7 +1095,7 @@ h2.bp_heading {
 }
 
 .first_child {
-	font-size: 18px;
+	font-size: 16px;
 	color: #000066;
 	text-decoration: none;
 	font-weight: bold;
@@ -1111,4 +1118,3 @@ h2.bp_heading {
 	text-decoration: underline;
 }
 
-:last-child a {
