--- a/n_highschool.css
+++ b/n_highschool.css
@@ -1101,11 +1101,12 @@ h2.bp_heading {
 	font-weight: bold;
 	white-space: nowrap;
 }
-
+/*リストのCSS*/
 .list_link li {
 	list-style-type: none;
 	font-size: 14px;
 	color: #272727;
+	font-weight: 500;
 	padding: 10px 0px 5px 0px;
 }
 
@@ -1117,4 +1118,27 @@ h2.bp_heading {
 .list_link a:hover {
 	text-decoration: underline;
 }
+
+/*提携スクールリストのCSS*/
+.list_link_lastrow li:nth-of-type(1){
+	border-top: 1px solid gray;
+	padding-top: 20px;
+}
+
+.list_link_lastrow li {
+	list-style-type: none;
+	font-size: 14px;
+	color: #272727;
+	padding: 10px 0px 5px 0px;
+}
+
+.list_link_lastrow a {
+	color: #272727;
+	text-decoration: none;
+}
+
+.list_link_lastrow a:hover {
+	text-decoration: underline;
+}
+
 
