--- a/n_highschool.css
+++ b/n_highschool.css
@@ -1210,8 +1210,42 @@ p.youtube_title {
 	float: left;
 }
 
-.copyright_block {
-	max-width: 1060px;
+/*コピーライトのブロック*/
+#copyright_block {
+	margin-top: 100px;
+	max-width: 100%;
 	height: 50px;
 	background-color: black;
+	overflow: hidden;
 }
+
+.copyright_text_area {
+	max-width: 1060px;
+	margin: 0 auto;
+	height: 20px;
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+}
+
+.homeback {
+	float: left;
+	font-size: 80%;
+	vertical-align: middle
+}
+
+.homeback a {
+	color: #fffffe;
+	text-decoration: none;
+}
+
+.homeback a:hover {
+	text-decoration: underline;
+}
+
+.copyright small {
+	text-align: right;
+	color: #fffffe;
+}
+
+
