H2下線の太線ボーダーのpositionをアブソリュートに修正中 ・relativeでウィンドウや端末ごとにズレが確認されたので

--- a/n_highschool.css
+++ b/n_highschool.css
@@ -491,9 +491,8 @@ h2.subjective_action:before {
 
 .heading:after {
 	content: '';
-	position: relative;
-	top: 20px;
-	right: 103px;
+	position: absolute;
+	top: 1620px;
 	display: inline-block;
 	width: 300px;
 	height: 2px;
