--- a/n_highschool.css
+++ b/n_highschool.css
@@ -90,7 +90,7 @@
 	transform: scale(0.5);
 	vertical-align: middle;
 	background: rgb(217, 217, 217);
-	padding: 0 0 0 0;
+	padding: 0;
 }
 
 /* ヘッダー中央 */
@@ -99,7 +99,6 @@
 	max-width: 1060px;
 	height: 90px;
 	margin: 0 auto;
-	vertical-align: baseline;
 }
 
 .n_school_logo {
@@ -154,6 +153,7 @@
 	list-style-type: none;
 	padding: 0 24px;
 	border-left :solid 1px #dcdddd;
+	overflow: hidden;
 }
 
 /* リンク最後尾のボーダー設定 */
@@ -163,7 +163,8 @@
 	list-style-type: none;
 	padding: 0 24px;
 	border-left :solid 1px #dcdddd;
-	border-right :solid 1px #dcdddd
+	border-right :solid 1px #dcdddd;
+	overflow: hidden;
 }
 
 /* ヘッダーナビリンクの書体設定 */
@@ -299,9 +300,9 @@
 /* ヘッダー下のリストテキストリンク */
 #header_list_link {
 	width: 100%;
-	height: 70px;
+	height: auto;
 	background: #181836;
-	padding: 5px 0 10px;
+	padding: 5px 0 15px;
 }
 
 .text_links {
