--- a/n_highschool.css
+++ b/n_highschool.css
@@ -144,6 +144,7 @@
 
 .header_bottom_nav {
 	float: left;
+	position: relative;
 }
 
 /* リンクのul CSS設定 */
@@ -200,8 +201,8 @@
 	width: 0;
 	border: 7px solid transparent;
 	border-bottom-color: #181836;
-	left: 10.5%;
-	top: 176px;
+	left: 11.5%;
+	top: 57px;
 }
 
 /* Net Courseの画像アイコン */
@@ -1403,7 +1404,7 @@ li.list_link_first {
 }
 
 .homeback a {
-	color: #fffffe;
+	color: #999999;
 	text-decoration: none;
 }
 
@@ -1413,9 +1414,80 @@ li.list_link_first {
 
 .copyright small {
 	text-align: right;
-	color: #fffffe;
+	color: #999999;
 }
 
+/*ヘッダー追従ブロック*/
+#header_fixed {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 60px;
+	background: rgba(255,255,255,0.8);
+}
 
+.fixed_nav {
+	max-width: 1060px;
+	margin: 0 auto;
+	display: flex;
+}
 
+.fixed_nav li {
+	display: block;
+	padding: 0 20px;
+	list-style: none;
+}
 
+.left_fixed {
+	margin-right: auto;
+}
+
+.fixed_info {
+	font-size: 11px;
+	color: #8d959c;
+	text-align: left;
+	vertical-align: middle;
+}
+
+.introduce_box_fixed {
+	width: 150px;
+	height: auto;
+	padding: 10px 5px;
+    font-weight: bold;
+	border: solid 1px #1f286f;
+	text-align: center;
+	display: inline-block;
+	font-size: 15px;
+	color: #1f286f;
+}
+
+.introduce_box_fixed:hover{
+	background-color: #1f286f;
+	color:white;
+	transition: 0.5s;
+}
+
+.introduce_box_fixed a{
+	text-decoration: none;
+	color: #1f286f;
+	}
+
+.introduce_box_fixed a:hover{
+	text-decoration: none;
+	color: white;
+	transition: 0.5s;
+	}
+
+.introduce_box_fixed a:after{
+	position: relative;
+	left: 15px;
+	content: '>';
+	color: #1f286f;
+}
+
+.introduce_box_fixed a:hover:after{
+	content: '>';
+	color:white;
+	transition: 0.5s;
+}
