--- a/n_highschool.css
+++ b/n_highschool.css
@@ -271,7 +271,6 @@
 .introduce_box li:hover{
 	background-color: #1f286f;
 	color:white;
-	transition: 0.5s;
 }
 
 .introduce_box li a{
@@ -282,7 +281,6 @@
 .introduce_box li a:hover{
 	text-decoration: none;
 	color: white;
-	transition: 0.5s;
 	}
 
 .introduce_box li a:after{
@@ -295,7 +293,6 @@
 .introduce_box li a:hover:after{
 	content: '>';
 	color:white;
-	transition: 0.5s;
 }	
 
 /* ヘッダー下のリストテキストリンク */
@@ -330,7 +327,6 @@
 .text_links li a:hover{
 	color: #181836;
 	background-color:white;
-	transition: 0.5s
 }
 
 .text_links li:nth-child(n+2):before{
@@ -435,22 +431,6 @@ h2.subjective_action {
 	text-align: center;
 	padding-top: 130px;
 }
-
-/*
-h2.subjective_action:before {
-	content: '';
-	position: absolute;
-	left: 0px;
-	right: 0px;
-	top: 1290px;
-	margin: auto;
-	display: inline-block;
-	width: 200px;
-	height: 1px;
-	background-color: black;
-	border-radius: 2px;
-}
-*/
 
 /*メインコラム トップのH2メッセージ*/
 .creativity {
@@ -1430,13 +1410,15 @@ li.list_link_first {
 .fixed_nav {
 	max-width: 1060px;
 	margin: 0 auto;
+	padding: 10px 5px;
 	display: flex;
+	align-items: center
 }
 
 .fixed_nav li {
 	display: block;
-	padding: 0 20px;
 	list-style: none;
+	margin-left: 10px;
 }
 
 .left_fixed {
@@ -1454,6 +1436,7 @@ li.list_link_first {
 	width: 150px;
 	height: auto;
 	padding: 10px 5px;
+	margin-left: 5px;
     font-weight: bold;
 	border: solid 1px #1f286f;
 	text-align: center;
@@ -1465,7 +1448,6 @@ li.list_link_first {
 .introduce_box_fixed:hover{
 	background-color: #1f286f;
 	color:white;
-	transition: 0.5s;
 }
 
 .introduce_box_fixed a{
@@ -1476,7 +1458,6 @@ li.list_link_first {
 .introduce_box_fixed a:hover{
 	text-decoration: none;
 	color: white;
-	transition: 0.5s;
 	}
 
 .introduce_box_fixed a:after{
@@ -1489,5 +1470,4 @@ li.list_link_first {
 .introduce_box_fixed a:hover:after{
 	content: '>';
 	color:white;
-	transition: 0.5s;
 }
